--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -8,10 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-	<ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 </Project>
